# VST3-Whykiki-RVC

./: .gitattributes  .gitignore  .gitmodules  CMakePresets.json  README.md
docs/: development_steps.md  requirements.md
plugin/: CMakeLists.txt
plugin/source/: modelmanager.cpp  modelmanager.h  plugincontroller.cpp  plugincontroller.h  pluginprocessor.cpp  pluginprocessor.h  version.h
tools/: setup_rvc_server.sh
